--- a/wsgi/app/templates/base.html
+++ b/wsgi/app/templates/base.html
@@ -61,7 +61,7 @@
         <div class="col l3 s12">
           <h5 class="white-text">Contact</h5>
           <ul>
-            <li><a class="white-text" href="mailto:youremail@qmul.ac.uk">youremail@qmul.ac.uk</a></li>
+            <li><a class="white-text" href="mailto:youremail@qmul.ac.uk">m.j.akbar@se16.qmul.ac.uk</a></li>
           </ul>
         </div>
       </div>
