--- a/wsgi/app/templates/base.html
+++ b/wsgi/app/templates/base.html
@@ -14,7 +14,12 @@
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
+        {% for item in nav.top %}
+        <li class="{{ 'active' if item.is_active else  " }}">
+        <a href="{{item.url }}">{{ item.label }}</a>
+        </li>
+        {% endfor %}
+
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
