--- a/wsgi/app/templates/base.html
+++ b/wsgi/app/templates/base.html
@@ -15,15 +15,18 @@
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
         {% for item in nav.top %}
-        <li class="{{ 'active' if item.is_active else  " }}">
-        <a href="{{item.url }}">{{ item.label }}</a>
+        <li class="{{ 'active' if item.is_active else '' }}">
+        <a href="{{ item.url }}">{{ item.label }}</a>
         </li>
         {% endfor %}
-
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Navbar Link</a></li>
+        {% for item in nav.top %}
+        <li class="{{ 'active' if item.is_active else '' }}">
+        <a href="{{ item.url }}">{{ item.label }}</a>
+        </li>
+        {% endfor %}
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
