--- a/wsgi/app/templates/my_form.html
+++ b/wsgi/app/templates/my_form.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}<img src="{{ url_for('static', filename = 'img/'+mood+'_face.jpeg')}}", width=80, height=60, quality=95 />
 {% endblock %}
+{% block content %}
 <form action="" method="POST">
  	{{ form.csrf_token }}
  	{{ form.message.label }} 
