--- a/wsgi/app/templates/embed.html
+++ b/wsgi/app/templates/embed.html
@@ -1,4 +1,4 @@
-
+<!doctype html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -54,8 +54,8 @@
  
 
   </body>
-
-
+</html>
+<html lang="en">
   <head>
     <meta charset='utf-8' />
     <meta http-equiv='content-type' content='text/html; charset=utf-8' />
@@ -92,7 +92,7 @@
     {{ plot_div|indent(4)|safe }}
     <p> Demonstrates some very simple embedding into a webpage</p>
   </body>
-
+</html>
 
  <footer class="page-footer orange">
     <div class="container">
@@ -129,4 +129,3 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
-</html>
