--- a/wsgi/app/templates/index.html
+++ b/wsgi/app/templates/index.html
@@ -5,7 +5,7 @@
       </div>
       <div class="row center">
         <a href="emotion" id="download-button" class="btn-large waves-effect waves-light orange">Emotions</a>
-        <a href="database/collections" id="download-button" class="btn-large waves-effect waves-light orange">Database</a>
+        <a href="database/collections" id="download-button" class="btn-large waves-effect waves-light orange">database/collections</a>
       </div>
 {% endblock %}
 
