--- a/wsgi/app/templates/base.html
+++ b/wsgi/app/templates/base.html
@@ -69,6 +69,7 @@
           <h5 class="white-text">Contact</h5>
           <ul>
             <li><a class="white-text" href="mailto:youremail@qmul.ac.uk">m.j.akbar@se16.qmul.ac.uk</a></li>
+            <li><a class="white-text" href="https://github.com/Procrastinationmonkey/courseworkcloud">github link</a></li>
           </ul>
         </div>
       </div>
